# stock-screener

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  pyproject.toml  value-investing-screener-roadmap.md
.claude/agents/: git-workflow-guide.md
.claude/rules/: alerts.md  architecture.md  commands.md  data-policy.md  deployment.md  development.md  discord-bot-deployment.md  discord-bot.md  frontend.md  git-worktree.md  self-hosted-runner.md  ticker-strategy.md  vision.md
.claude/skills/opensearch-client/: SKILL.md
.claude/skills/opensearch-server/: SKILL.md
.github/workflows/: backup.yml  test.yml  update-data.yml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: alerts.py  discord.py  screen.py  stocks.py  user_presets.py  watchlist.py
backend/app/core/: auth.py  config.py  database.py  rate_limit.py
backend/app/models/: alert.py  common.py  discord.py  stock.py  user_preset.py  watchlist.py
backend/app/services/: alerts.py  discord_service.py  screener.py  user_presets.py  watchlist.py
data/: README.md
data-pipeline/: pyproject.toml
data-pipeline/cli/: __init__.py  main.py  tickers.py
data-pipeline/cli/commands/: __init__.py
data-pipeline/collectors/: __init__.py  base.py  kr_collector.py  kr_stocks.py  us_collector.py  us_stocks.py
data-pipeline/common/: __init__.py  config.py  indicators.py  kis_client.py  logging.py  naver_finance.py  rate_limit.py  retry.py  session.py  storage.py  utils.py
data-pipeline/config/: __init__.py  constants.py  settings.py
data-pipeline/core/: __init__.py  errors.py  types.py
data-pipeline/kr/: __init__.py  config.py  pipeline.py
data-pipeline/kr/sources/: __init__.py  fdr.py  kis.py  naver.py
data-pipeline/loaders/: __init__.py  csv_to_db.py
data-pipeline/observability/: __init__.py  logger.py  metrics.py
data-pipeline/processors/: __init__.py  quality_check.py  validators.py
data-pipeline/rate_limit/: __init__.py  backoff.py  progress.py  strategies.py
data-pipeline/sources/: __init__.py  base.py  fdr_source.py  yfinance_source.py
data-pipeline/storage/: __init__.py  base.py  csv_storage.py  supabase_storage.py
data-pipeline/us/: __init__.py  config.py  pipeline.py
data-pipeline/us/resilience/: __init__.py  circuit_breaker.py  rate_limiter.py  retry.py
data-pipeline/us/sources/: __init__.py  yfinance.py
discord-bot/: USAGE.md  pyproject.toml
discord-bot/bot/: __init__.py  __main__.py  api.py  main.py
docs/: PRD.md  opensearch-schema.md  rate-limit-optimization.md
docs/plans/: data-pipeline-optimization-plan.md  kr-yfinance-removal-plan.md
frontend/: .env.production  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
frontend/src/__tests__/: Header.test.tsx  Skeleton.test.tsx  Toast.test.tsx  Tooltip.test.tsx  api.test.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/components/: AlertForm.tsx  FilterPanel.tsx  PresetForm.tsx  StockTable.tsx  WatchlistButton.tsx
frontend/src/contexts/: AuthContext.tsx  (+2 more)
scripts/: collect-and-backup.sh  migrate_data_structure.py  run-pipeline.sh
supabase/: config.toml  discord_schema.sql  schema.sql
supabase/migrations/: 001_add_technical_indicators.sql  001_create_enums.sql  002_create_companies.sql  002_fix_numeric_precision.sql  003_create_financials.sql  004_create_prices.sql  005_create_metrics.sql  006_create_watchlist.sql  007_create_alerts.sql  008_create_indexes.sql  009_create_rls.sql  010_create_triggers.sql  011_add_52week_range.sql  012_add_beta.sql  013_add_moving_averages.sql  014_add_peg_ratio.sql  015_add_rsi.sql  016_add_volume_change.sql  017_add_macd.sql  018_add_bollinger_bands.sql  019_add_mfi.sql  020_add_momentum_trend.sql  021_fix_security_invoker.sql
tests/: conftest.py
tests/backend/: test_api.py  test_validation.py
tests/data_pipeline/: __init__.py  conftest.py  test_indicators.py  test_kis_client.py  test_kr_stocks.py  test_naver_finance.py
(+31 files in other folders)
