[project]
name = "stock-screener"
version = "0.1.0"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["backend", "data-pipeline", "discord-bot"]

[dependency-groups]
dev = [
    "ruff>=0.14",
    "ty>=0.0.7",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".venv", "venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF"]
ignore = ["E501", "B008"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "data_pipeline", "discord_bot"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ty]
# ty auto-detects requires-python

[tool.ty.src]
exclude = ["tests/fixtures/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
