[project]
name = "stock-screener-data-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.36",
    "pykrx>=1.0.45",
    "requests>=2.31.0",
    "supabase>=2.3.4",
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.1",
    "setuptools>=69.0.0",
    "lxml>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["collectors", "processors", "loaders"]
