[project]
name = "stock-screener-data-pipeline"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    # Data fetching
    "yfinance>=0.2.36",
    "finance-datareader>=0.9.50",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "curl-cffi>=0.7.0",
    # Database
    "supabase>=2.3.4",
    # Data processing
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    # Utilities
    "tqdm>=4.66.1",
    "setuptools>=69.0.0",
    "lxml>=5.0.0",
]

[project.scripts]
stock-pipeline = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    # New architecture
    "cli",
    "sources",
    "storage",
    "rate_limit",
    "pipeline",
    "config",
    # Legacy (will be removed)
    "collectors",
    "processors",
    "loaders",
    "common",
]
