[project]
name = "stock-screener-discord-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.3.2",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]
